@@ -8,6 +8,6 @@ DIST freeglut-2.6.0-mpx-r6.patch 13696 RMD160 c6a4fa56c512b3e3d4179e00a531e7e905
 DIST freeglut-2.6.0.tar.gz 1124186 RMD160 43bdb1a6d99445ee09370930ec6bc0f8310e7fcf SHA1 68306c4486c13d005a4e4d54035e0c0b1bdc220b SHA256 615b41edc96c405ee6bb7e9a2942642140c3e57c1dd8c68e968a17ddfb59e98f
 EBUILD freeglut-2.4.0-r1.ebuild 1711 RMD160 dbd100653d126dab63548ce0ed30865f70f7e0cf SHA1 82e869de543ff606131fcaee3cae598388551824 SHA256 dedad43a7f04ba373386337df791ee53dc305c39ac97e59c41f9d91dd70a8011
 EBUILD freeglut-2.4.0-r2.ebuild 1768 RMD160 8a796ce794f4a63508cc2cf7d77fca22bc7a61dd SHA1 c92358a34e1c84a0ac2fff6a04c2d013c03e93dc SHA256 3a9a3a2466c20e060b9d75b0f54d7417aa9c3d94e6723856871d695a7da3cc09
-EBUILD freeglut-2.6.0.ebuild 1297 RMD160 4033e34af688193915eb7ccde4f54232dd6c465c SHA1 43907849138a122de8b08046590e8a99a9b2a7d6 SHA256 2c25c106c1f9ac0f92d6741bfe16a25e8e2c9cbcbeb3edbc4af683179a015972
-MISC ChangeLog 8097 RMD160 096d8b0e51cef576766a73b572274a4cb59c41ee SHA1 7f90a5c4ef4fa53983beefdcbe5c88579446cc6d SHA256 241879edee92a7e6f9fc6675e3add79ca2b932d2f556a00f6d0cda53bbe52879
+EBUILD freeglut-2.6.0.ebuild 1445 RMD160 548eeef729ee419bc563b722a6824c1b074a3b81 SHA1 37ad208de435bc21012a91055a54e9046cce3f14 SHA256 d075aebd4863def972b29ada4ea1c67db416d93e3861ea12d753117ced00a0ab
+MISC ChangeLog 8245 RMD160 a4b3ba93543067df9fb1f6f51c5fc1d54483b56b SHA1 af46e8cfff9073f91523cbf4a50c621c67c00fce SHA256 ca96164797cd0f861856caf1dee383104a3c14f3572651c4314a7adaaef32b91
 MISC metadata.xml 547 RMD160 aca9d5b8a53da9ad98263a30fafdadb0f97cf368 SHA1 2b890cdc7b0ad39313851f4794e7d04cf360fcd9 SHA256 f20911324f4b6374ced9986fae7cfa7f2bf3041817042a8db923f7e4bcf65b96
